# hn-digest-vibecode

./: .env.example  .env.testing  .gitignore  DEPLOYMENT.md  README.md  digest_backup_20250731_161653.txt  phase1-context.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/dev-sessions/2025-07-30-1551-hn-digest-init/: phase2-context.md  phase3-context.md  plan.md  spec.md
docs/dev-sessions/2025-08-05-1549-podcast/: phase1-context.md  phase2-context.md  plan.md  spec.md
scripts/: daily_digest.sh  setup_cron.sh
src/hn_digest/: __init__.py  ai_summarizer.py  article_scraper.py  config.py  content_filter.py  email_formatter.py  email_sender.py  hn_client.py  main.py  models.py  podcast_generator.py  summary_formatter.py
tests/: __init__.py  test_ai_summarizer.py  test_article_scraper.py  test_cli_integration.py  test_content_filter.py  test_email_formatter.py  test_email_sender.py  test_hn_client.py  test_integration.py  test_podcast_generator.py  test_summary_formatter.py
